# next_web_ai_backend

./: .gitignore  README.md  gunicorn.conf.py  pyproject.toml
app/: main.py
app/config/: globals.py
app/routers/: model.py  webrtc.py
app/utils/: aws_helper.py  log.py  magic_shield.py  perf.py  redis_helper.py  types.py  video_helper.py
