[project]
name = "next_web_ai_backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Robin.Wang", email = "3Jg$94sbQ@q1"},
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic-settings>=2.2.1",
    "boto3>=1.34.102",
    "logtail-python>=0.2.10",
    "gunicorn>=22.0.0",
    "redis[hiredis]>=5.0.4",
    "aiortc>=1.9.0",
    "numpy==1.26",
    "opencv-contrib-python-headless>=4.10.0.84",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "doppler run -- uvicorn app.main:app --reload"
prod = "doppler run --command='gunicorn app.main:app -c gunicorn.conf.py'"
kill = { shell = "kill -9 `ps aux |grep gunicorn |grep app.main | awk '{ print $2 }'`"}
